--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,54 @@
     <script src="javascript.js"></script>
 </head>
 <body>
-    
+   <h1> Marvel Knowledge Quiz</h1> 
+    <div id="q1">
+        <form id="codeForm">
+            <p>Lorum Ispum</p>
+            <textarea id="codeAnswer" rows="2" cols="50"></textarea>
+            <button type="submit" id="submitButton">Submit</button>
+          </form>
+          <div id="feedback"></div>
+    </div>
+    <div id="q2">
+        <form id="codeForm">
+            <p>Lorum Ispum</p>
+            <textarea id="codeAnswer" rows="2" cols="50"></textarea>
+            <button type="submit" id="submitButton">Submit</button>
+          </form>
+          <div id="feedback"></div>
+    </div>
+    <div id="q3">
+        <form id="codeForm">
+            <p>Lorum Ispum</p>
+            <textarea id="codeAnswer" rows="2" cols="50"></textarea>
+            <button type="submit" id="submitButton">Submit</button>
+          </form>
+          <div id="feedback"></div>
+    </div>
+    <div id="q4">
+        <form id="codeForm">
+            <p>Lorum Ispum</p>
+            <textarea id="codeAnswer" rows="2" cols="50"></textarea>
+            <button type="submit" id="submitButton">Submit</button>
+          </form>
+          <div id="feedback"></div>
+    </div>
+    <div id="q5">
+        <form id="codeForm">
+            <p>Lorum Ispum</p>
+            <textarea id="codeAnswer" rows="2" cols="50"></textarea>
+            <button type="submit" id="submitButton">Submit</button>
+          </form>
+          <div id="feedback"></div>
+    </div>
+    <div id="q6">
+        <form id="codeForm">
+            <p>Lorum Ispum</p>
+            <textarea id="codeAnswer" rows="2" cols="50"></textarea>
+            <button type="submit" id="submitButton">Submit</button>
+          </form>
+          <div id="feedback"></div>
+    </div>
 </body>
 </html>
